--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "bugs": {
     "url": "https://github.com/oslabs-beta/watchmo/issues"
   },
+  "bin": {
+    "init": "src/commands/init.js"
+  },
   "homepage": "https://github.com/oslabs-beta/watchmo#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
