--- a/package.json
+++ b/package.json
@@ -20,13 +20,21 @@
   },
   "homepage": "https://github.com/oslabs-beta/watchmo#readme",
   "dependencies": {
+    "@babel/preset-typescript": "^7.7.4",
+    "@types/chrome": "0.0.91",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "d3": "^5.15.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
+    "graphql-syntax-highlighter-react": "^0.4.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "reactstrap": "^8.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -35,8 +43,12 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
+    "react-test-renderer": "^16.12.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
