--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.7.4",
     "@types/chrome": "0.0.91",
+    "@types/d3": "^5.7.2",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "body-parser": "^1.19.0",
