--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "watchmo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/server.js",
