--- a/src/watchmoData/config.json
+++ b/src/watchmoData/config.json
@@ -8,9 +8,20 @@
       ],
       "frequency": 5000
     },
+    "bigq": {
+      "queries": [
+        "{ books { name id genre isbn { id isbn } author { id name } } }",
+        "{ books { name id genre  author { id name } isbn { id isbn }} }",
+        "{ authors { name books {name isbn {isbn} } } }"
+      ],
+      "frequency": 5000
+    }
+    ,
     "isbn": {
       "queries": [
-        "{ isbns { isbn id } }"
+        "{ isbns { isbn id } }",
+        "{ book(id: \"5e2f46e69f2cae22f6f6095f\") { name }}"
+
       ],
       "frequency": 5000
     }
