--- a/src/watchmoData/config.json
+++ b/src/watchmoData/config.json
@@ -1,18 +1,9 @@
 {
   "endpoint": "http://localhost:4545/graphql",
   "categories": {
-    "default": {
-      "queries": ["{ books { name }}", "{ authors { name }}"],
-      "frequency": 5000
-    },
-    "default2": {
-      "queries": ["{ books { name }}", "{ authors { name }}"],
-      "frequency": 5000
-    },
-    "default3": {
-      "queries": ["{ books { name }}", "{ authors { name }}"],
-      "frequency": 5000
-    }
+    "default": { "queries": ["{ books { name }}", "{ authors { name }}"], "frequency": 5000 },
+    "default2": { "queries": ["{ books { name }}", "{ authors { name }}"], "frequency": 5000 },
+    "default3": { "queries": ["{ books { name }}", "{ authors { name }}"], "frequency": 5000 }
   },
   "ISONLYFORDEVELOPMENTPLEASEDONTUPLOADTHIS": true
 }
