--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/server.js",
     "build": "NODE_ENV=production & webpack",
     "dev": "NODE_ENV=development & nodemon src/server/server.js & webpack-dev-server --open"
@@ -22,6 +22,14 @@
     "watchmo": "src/commands/watchmo.js"
   },
   "homepage": "https://github.com/oslabs-beta/watchmo#readme",
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(reactstrap)/)"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss)$": "babel-jest"
+    }
+  },
   "dependencies": {
     "@babel/preset-typescript": "^7.7.4",
     "@types/chrome": "0.0.91",
@@ -51,12 +59,16 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel": "^6.23.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "cheerio": "^1.0.0-rc.3",
     "css-loader": "^3.4.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
     "jest": "^24.9.0",
+    "jest-cli": "^25.1.0",
     "nodemon": "^2.0.2",
     "react-test-renderer": "^16.12.0",
     "sass-loader": "^8.0.2",
