--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     }
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.7.4",
     "@types/chrome": "0.0.91",
     "@types/d3": "^5.7.2",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "chalk": "^3.0.0",
     "d3": "^5.15.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
@@ -58,6 +58,7 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
     "babel": "^6.23.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
