--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.tsx",
   "scripts": {
     "test": "jest",
-    "start": "node src/server/server.js",
+    "start": "nodemon src/server/server.js",
     "build": "NODE_ENV=production & webpack",
     "dev": "NODE_ENV=development & nodemon src/server/server.js & webpack-dev-server --open"
   },
