--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^16.9.4",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "codemirror-graphql": "^0.11.6",
     "d3": "^5.15.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
