--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "start": "node src/server/server.js",
     "build": "NODE_ENV=production & webpack",
-    "dev": "NODE_ENV=development & nodemon src/server/server.js & webpack-dev-server --open"
+    "dev": "NODE_ENV=development & nodemon src/server/server.js & webpack-dev-server --open",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -35,10 +36,11 @@
     "@types/d3": "^5.7.2",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/reactstrap": "^8.4.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
-    "codemirror-graphql": "^0.11.6",
     "chalk": "^3.0.0",
+    "codemirror-graphql": "^0.11.6",
     "d3": "^5.15.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
@@ -60,6 +62,8 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "babel": "^6.23.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
@@ -69,9 +73,20 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^24.9.0",
     "jest-cli": "^25.1.0",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "react-test-renderer": "^16.12.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
